src/expr/src/scalar/snapshots/mz_expr__scalar__func__mod_numeric.snap
---
source: src/expr/src/scalar/func.rs
expression: "#[sqlfunc(\n    output_type = \"Numeric\",\n    is_infix_op = true,\n    sqlname = \"%\",\n    propagates_nulls = true\n)]\nfn mod_numeric<'a>(a: Datum<'a>, b: Datum<'a>) -> Result<Datum<'a>, EvalError> {\n    let mut a = a.unwrap_numeric();\n    let b = b.unwrap_numeric();\n    if b.0.is_zero() {\n        return Err(EvalError::DivisionByZero);\n    }\n    let mut cx = numeric::cx_datum();\n    cx.rem(&mut a.0, &b.0);\n    numeric::munge_numeric(&mut a.0).unwrap();\n    Ok(Datum::Numeric(a))\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct ModNumeric;
impl<'a> crate::func::binary::EagerBinaryFunc<'a> for ModNumeric {
    type Input1 = Datum<'a>;
    type Input2 = Datum<'a>;
    type Output = Result<Datum<'a>, EvalError>;
    fn call(
        &self,
        a: Self::Input1,
        b: Self::Input2,
        temp_storage: &'a mz_repr::RowArena,
    ) -> Self::Output {
        {
            let mut a = a.unwrap_numeric();
            let b = b.unwrap_numeric();
            if b.0.is_zero() {
                return Err(EvalError::DivisionByZero);
            }
            let mut cx = numeric::cx_datum();
            cx.rem(&mut a.0, &b.0);
            numeric::munge_numeric(&mut a.0).unwrap();
            Ok(Datum::Numeric(a))
        }
    }
    fn output_type(
        &self,
        input_type_a: mz_repr::ColumnType,
        input_type_b: mz_repr::ColumnType,
    ) -> mz_repr::ColumnType {
        use mz_repr::AsColumnType;
        let output = <Numeric>::as_column_type();
        let propagates_nulls = crate::func::binary::EagerBinaryFunc::propagates_nulls(
            self,
        );
        let nullable = output.nullable;
        output
            .nullable(
                nullable
                    || (propagates_nulls
                        && (input_type_a.nullable || input_type_b.nullable)),
            )
    }
    fn introduces_nulls(&self) -> bool {
        <Numeric as ::mz_repr::DatumType<'_, ()>>::nullable()
    }
    fn is_infix_op(&self) -> bool {
        true
    }
    fn propagates_nulls(&self) -> bool {
        true
    }
}
impl std::fmt::Display for ModNumeric {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("%")
    }
}
